more word wrap fixes

--- a/view/theme/redbasic/css/style.css
+++ b/view/theme/redbasic/css/style.css
@@ -1932,12 +1932,14 @@ nav .dropdown-menu {
 	background-color: $comment_item_colour;
 	border-bottom-left-radius: $radiuspx;
 	border-bottom-right-radius: $radiuspx;
+	word-wrap: break-word;
 }
 
 .section-content-wrapper-np {
 	background-color: $comment_item_colour;
 	border-bottom-left-radius: $radiuspx;
 	border-bottom-right-radius: $radiuspx;
+	word-wrap: break-word;
 }
 
 [id^="cloud-index-"]:hover td,
